<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.menu.MenuActivity">

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:background="@drawable/bg_marketplace_header"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/menu_title"
        android:textColor="@color/surfaceColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menuContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="@drawable/bg_card_store"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_description"
            android:textColor="@color/textColorSecondary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/categoriesOption"
            style="@style/MenuOptionText"
            android:text="@string/categories_title" />

        <TextView
            android:id="@+id/offersOption"
            style="@style/MenuOptionText"
            android:text="@string/offers" />

        <TextView
            android:id="@+id/favoritesOption"
            style="@style/MenuOptionText"
            android:text="@string/favorites" />

        <TextView
            android:id="@+id/addressesOption"
            style="@style/MenuOptionText"
            android:text="@string/addresses" />

        <TextView
            android:id="@+id/couponsOption"
            style="@style/MenuOptionText"
            android:text="@string/coupons" />

        <TextView
            android:id="@+id/supportOption"
            style="@style/MenuOptionText"
            android:text="@string/support" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surfaceColor"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/colorPrimary"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
